2017-05-30  David Malcolm  <dmalcolm@redhat.com>

	* g++.dg/plugin/plugin.exp (plugin_test_list): Add...
	* g++.dg/plugin/show-template-tree-color-no-elide-type.C: New
	test case.
	* g++.dg/plugin/show-template-tree-color.C: New test case.
	* g++.dg/plugin/show_template_tree_color_plugin.c: New plugin.
	* g++.dg/template/show-template-tree-2.C: New test case.
	* g++.dg/template/show-template-tree-3.C: New test case.
	* g++.dg/template/show-template-tree-4.C: New test case.
	* g++.dg/template/show-template-tree-no-elide-type.C: New test case.
	* g++.dg/template/show-template-tree.C: New test case.

2017-05-30  Segher Boessenkool  <segher@kernel.crashing.org>

	* gcc.target/powerpc/shift-dot.c: Delete -mgen-cell-microcode from
	dg-options.
	* gfortran.dg/pr80107.f: Delete testcase.

2017-05-30  Uros Bizjak  <ubizjak@gmail.com>

	PR target/80833
	* gcc.target/i386/pr80833-1.c: New test.
	* gcc.target/i386/pr80833-2.c: Ditto.

2017-05-30  Nathan Sidwell  <nathan@acm.org>

	PR c++/80913
	* g++.dg/lookup/pr80913.C: New.

2017-05-30  Richard Biener  <rguenther@suse.de>

	PR middle-end/80901
	* gcc.dg/torture/pr80901.c: New testcase.

2017-05-30  Robin Dapp  <rdapp@linux.vnet.ibm.com>

	* gcc.target/s390/vector/vec-nopeel-2.c: New test.

2017-05-30  Jozef Lawrynowicz  <jozef.l@somniumtech.com>

	PR target/78838
	* gcc.target/msp430/interrupt_fn_placement.c: New test.

2017-05-30  Richard Biener  <rguenther@suse.de>

	PR middle-end/80876
	* gcc.dg/torture/pr80876.c: New testcase.

2017-05-29  Nathan Sidwell  <nathan@acm.org>

	PR c++/80891 (#5)
	* g++.dg/lookup/pr80891-5.C: New.

2017-05-29  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/53029
	* gfortran.dg/read_5.f90: New test.

2017-05-29  Nathan Sidwell  <nathan@acm.org>

	PR c++/80891 (#4)
	* g++.dg/lookup/pr80891-4.C: New.

	PR c++/80891 (#1)
	* g++.dg/lookup/pr80891-1.C: New.

	PR c++/80891 (#3)
	* g++.dg/lookup/pr80891-3.C: New.

	PR c++/80891 (#2)
	* g++.dg/lookup/pr80891-2.C: New.
